Update: main - Diff report completed

--- a/diff.html
+++ b/diff.html
@@ -15888,7 +15888,7 @@
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">  &quot;<ins>version</ins>&quot;: &quot;<ins>0</ins>.<ins>22</ins>.<ins>3</ins>&quot;,</span>
+            <span class="d2h-code-line-ctn">  &quot;<ins>version</ins>&quot;: &quot;<ins>0</ins>.<ins>22</ins>.<ins>4</ins>&quot;,</span>
         </div>
     </td>
 </tr><tr>
@@ -15921,7 +15921,7 @@
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">  &quot;<ins>requirements</ins>&quot;: [&quot;<ins>plugwise==0</ins>.<ins>17</ins>.<ins>7</ins>&quot;],</span>
+            <span class="d2h-code-line-ctn">  &quot;<ins>requirements</ins>&quot;: [&quot;<ins>plugwise==0</ins>.<ins>17</ins>.<ins>8</ins>&quot;],</span>
         </div>
     </td>
 </tr><tr>
@@ -24838,7 +24838,7 @@
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">    func: Callable[Concatenate[<ins>_T</ins>, _P], Awaitable[_R]]<ins>  # type: ignore[misc]</ins></span>
+            <span class="d2h-code-line-ctn">    func: Callable[Concatenate[<ins>_T</ins>, _P], Awaitable[_R]]</span>
         </div>
     </td>
 </tr><tr>
@@ -24849,7 +24849,7 @@
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">) -&gt; Callable[Concatenate[<ins>_T</ins>, _P], Coroutine[Any, Any, _R]]:<ins>  # type: ignore[misc]</ins></span>
+            <span class="d2h-code-line-ctn">) -&gt; Callable[Concatenate[<ins>_T</ins>, _P], Coroutine[Any, Any, _R]]:</span>
         </div>
     </td>
 </tr><tr>
