--- a/diff_main.html
+++ b/diff_main.html
@@ -15822,7 +15822,7 @@
     <td class="d2h-del d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">  &quot;<del>version</del>&quot;: &quot;<del>0</del>.<del>22</del>.<del>3</del>&quot;,</span>
+            <span class="d2h-code-line-ctn">  &quot;<del>version</del>&quot;: &quot;<del>0</del>.<del>22</del>.<del>4</del>&quot;,</span>
         </div>
     </td>
 </tr><tr>
@@ -15855,7 +15855,7 @@
     <td class="d2h-del d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">  &quot;<del>requirements</del>&quot;: [&quot;<del>plugwise==0</del>.<del>17</del>.<del>7</del>&quot;],</span>
+            <span class="d2h-code-line-ctn">  &quot;<del>requirements</del>&quot;: [&quot;<del>plugwise==0</del>.<del>17</del>.<del>8</del>&quot;],</span>
         </div>
     </td>
 </tr><tr>
@@ -24832,7 +24832,7 @@
     <td class="d2h-del d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">    func: Callable[Concatenate[<del>_T</del>, _P], Awaitable[_R]]<del>  # type: ignore[misc]</del></span>
+            <span class="d2h-code-line-ctn">    func: Callable[Concatenate[<del>_T</del>, _P], Awaitable[_R]]</span>
         </div>
     </td>
 </tr><tr>
@@ -24843,7 +24843,7 @@
     <td class="d2h-del d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">) -&gt; Callable[Concatenate[<del>_T</del>, _P], Coroutine[Any, Any, _R]]:<del>  # type: ignore[misc]</del></span>
+            <span class="d2h-code-line-ctn">) -&gt; Callable[Concatenate[<del>_T</del>, _P], Coroutine[Any, Any, _R]]:</span>
         </div>
     </td>
 </tr><tr>
