Update: main - Diff report completed

--- a/diff_pw_18_0_try_2.html
+++ b/diff_pw_18_0_try_2.html
@@ -10516,7 +10516,7 @@
     <td class="d2h-del">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">SEVERITIES = [&quot;other&quot;, &quot;info&quot;, &quot;warning&quot;, &quot;error&quot;]</span>
+            <span class="d2h-code-line-ctn">SEVERITIES = [&quot;other&quot;, &quot;info&quot;, &quot;message&quot;, &quot;warning&quot;, &quot;error&quot;]</span>
         </div>
     </td>
 </tr><tr>
