Update: main - Diff report completed

--- a/diff_pw_18_0_try_2.html
+++ b/diff_pw_18_0_try_2.html
@@ -72,7 +72,7 @@
       </svg>      <a href="#d2h-093772" class="d2h-file-name">/home/runner/work/progress/progress/clones/{beta/custom_components → ha-core/homeassistant/components}/plugwise/climate.py</a>
       <span class="d2h-file-stats">
           <span class="d2h-lines-added">+62</span>
-          <span class="d2h-lines-deleted">-118</span>
+          <span class="d2h-lines-deleted">-119</span>
       </span>
     </span>
 </li>
@@ -6150,7 +6150,7 @@
 <tr>
     <td class="d2h-code-linenumber d2h-info"></td>
     <td class="d2h-info">
-        <div class="d2h-code-line">@@ -164,40 +130,18 @@</div>
+        <div class="d2h-code-line">@@ -164,41 +130,18 @@</div>
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
@@ -6259,7 +6259,7 @@
     <td class="d2h-del">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">        if hvac_mode == HVAC_MODE_AUTO and not self.device.get(&quot;schedule_temperature&quot;):</span>
+            <span class="d2h-code-line-ctn">        if hvac_mode == HVAC_MODE_AUTO and self.device[&quot;last_used&quot;] is None:</span>
         </div>
     </td>
 </tr><tr>
@@ -6281,7 +6281,7 @@
     <td class="d2h-del">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">                &quot;Cannot set HVAC mode to Auto: No schedule available&quot;</span>
+            <span class="d2h-code-line-ctn">                &quot;Cannot set HVAC mode to Auto: no schedule available&quot;</span>
         </div>
     </td>
 </tr><tr>
@@ -6490,7 +6490,7 @@
     <td class="d2h-del">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">                self._homekit_mode in [HVAC_MODE_HEAT, HVAC_MODE_COOL]</span>
+            <span class="d2h-code-line-ctn">                self._homekit_mode</span>
         </div>
     </td>
 </tr><tr>
@@ -6501,7 +6501,7 @@
     <td class="d2h-del">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">                and self.device[&quot;active_preset&quot;] == PRESET_AWAY</span>
+            <span class="d2h-code-line-ctn">                in [HVAC_MODE_HEAT, HVAC_MODE_COOL, HVAC_MODE_HEAT_COOL]</span>
         </div>
     </td>
 </tr><tr>
@@ -6512,7 +6512,7 @@
     <td class="d2h-del">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">            ):</span>
+            <span class="d2h-code-line-ctn">                and self.device[&quot;active_preset&quot;] == PRESET_AWAY</span>
         </div>
     </td>
 </tr><tr>
@@ -6523,7 +6523,7 @@
     <td class="d2h-del">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">                await self.async_set_preset_mode(PRESET_HOME)</span>
+            <span class="d2h-code-line-ctn">            ):</span>
         </div>
     </td>
 </tr><tr>
@@ -6534,12 +6534,23 @@
     <td class="d2h-del">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">-</span>
+            <span class="d2h-code-line-ctn">                await self.async_set_preset_mode(PRESET_HOME)</span>
+        </div>
+    </td>
+</tr><tr>
+    <td class="d2h-code-linenumber d2h-del">
+      <div class="line-num1">194</div>
+<div class="line-num2"></div>
+    </td>
+    <td class="d2h-del">
+        <div class="d2h-code-line">
+            <span class="d2h-code-line-prefix">-</span>
             <span class="d2h-code-line-ctn"><br></span>
         </div>
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
-      <div class="line-num1">194</div>
+      <div class="line-num1">195</div>
 <div class="line-num2">144</div>
     </td>
     <td class="d2h-cntx">
@@ -6550,7 +6561,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
-      <div class="line-num1">195</div>
+      <div class="line-num1">196</div>
 <div class="line-num2">145</div>
     </td>
     <td class="d2h-cntx">
@@ -6561,7 +6572,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
-      <div class="line-num1">196</div>
+      <div class="line-num1">197</div>
 <div class="line-num2">146</div>
     </td>
     <td class="d2h-cntx">
@@ -6572,7 +6583,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-del">
-      <div class="line-num1">197</div>
+      <div class="line-num1">198</div>
 <div class="line-num2"></div>
     </td>
     <td class="d2h-del">
@@ -6583,7 +6594,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-del">
-      <div class="line-num1">198</div>
+      <div class="line-num1">199</div>
 <div class="line-num2"></div>
     </td>
     <td class="d2h-del">
@@ -6594,7 +6605,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-del">
-      <div class="line-num1">199</div>
+      <div class="line-num1">200</div>
 <div class="line-num2"></div>
     </td>
     <td class="d2h-del">
@@ -6605,7 +6616,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-del">
-      <div class="line-num1">200</div>
+      <div class="line-num1">201</div>
 <div class="line-num2"></div>
     </td>
     <td class="d2h-del">
@@ -6616,7 +6627,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-del">
-      <div class="line-num1">201</div>
+      <div class="line-num1">202</div>
 <div class="line-num2"></div>
     </td>
     <td class="d2h-del">
@@ -6627,7 +6638,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-del">
-      <div class="line-num1">202</div>
+      <div class="line-num1">203</div>
 <div class="line-num2"></div>
     </td>
     <td class="d2h-del">
@@ -6638,7 +6649,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
-      <div class="line-num1">203</div>
+      <div class="line-num1">204</div>
 <div class="line-num2">147</div>
     </td>
     <td class="d2h-cntx">
@@ -15424,7 +15435,7 @@
     <td class="d2h-del d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">  &quot;<del>version</del>&quot;: &quot;<del>0</del>.<del>23</del>.<del>0a7</del>&quot;,</span>
+            <span class="d2h-code-line-ctn">  &quot;<del>version</del>&quot;: &quot;<del>0</del>.<del>23</del>.<del>0a9</del>&quot;,</span>
         </div>
     </td>
 </tr><tr>
@@ -15457,7 +15468,7 @@
     <td class="d2h-del d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">  &quot;<del>requirements</del>&quot;: [&quot;<del>plugwise==0</del>.<del>18</del>.<del>3</del>&quot;],</span>
+            <span class="d2h-code-line-ctn">  &quot;<del>requirements</del>&quot;: [&quot;<del>https:&#x2F;&#x2F;test-files</del>.<del>pythonhosted</del>.<del>org&#x2F;packages&#x2F;f1&#x2F;9e&#x2F;2ebe7a5eabd237febe07780fdf439457c80abd5d71b5642d5c43e45c89ef&#x2F;plugwise-0</del>.<del>18.4a3.tar.gz#plugwise==0.18.4a3</del>&quot;],</span>
         </div>
     </td>
 </tr><tr>
@@ -15523,7 +15534,7 @@
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">  &quot;<ins>zeroconf</ins>&quot;: [&quot;<ins>_plugwise</ins>.<ins>_tcp</ins>.<ins>local.</ins>&quot;],</span>
+            <span class="d2h-code-line-ctn">  &quot;<ins>zeroconf</ins>&quot;: [&quot;<ins>_plugwise</ins>.<ins>_tcp</ins>.<ins>local</ins>.&quot;],</span>
         </div>
     </td>
 </tr><tr>
